test_scripts/errors/for_non_iterable.shm
for x in 5 {}
