test_scripts/errors/for_non_iterable.stderr
 1 | for x in 5 {}
              ^
Error: Ident "iter" not available on 5
